--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,11 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.11.Final</version>
+        </dependency>
     </dependencies>
 </project>
