--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
             <version>1.1.2</version>
         </dependency>
 
+        <!-- new dependency on the MITM module -->
         <dependency>
             <groupId>net.lightbody.bmp</groupId>
             <artifactId>mitm</artifactId>
@@ -52,15 +53,24 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>21.0</version>
-        </dependency>
-
-        <dependency>
             <groupId>net.lightbody.bmp</groupId>
             <artifactId>browsermob-core</artifactId>
             <version>2.1.4</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.seleniumhq.selenium</groupId>
+                    <artifactId>selenium-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
+
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
         </dependency>
 
         <dependency>
@@ -94,9 +104,9 @@
         </dependency>
 
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.11.Final</version>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-all</artifactId>
+        <version>4.1.11.Final</version>
         </dependency>
     </dependencies>
 </project>
