--- a/pom.xml
+++ b/pom.xml
@@ -108,5 +108,11 @@
         <artifactId>netty-all</artifactId>
         <version>4.1.11.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 </project>
